all fucntionality with some redacted code

--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,31 @@
 {
   "manifest_version": 3,
-  "name": "X-Ray for Twitter",
+  "name": "X-Ray for Twitter (X Location Viewer)",
   "version": "1.0",
-  "permissions": ["scripting", "declarativeNetRequest"],
+  "description": "Reveals location and platform info for Twitter/X users. See where they tweet from and what device they use.",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "permissions": ["declarativeNetRequest"],
   "host_permissions": ["https://x.com/*", "https://twitter.com/*"],
   "declarative_net_request": {
     "rule_resources": [{ "id": "ruleset_1", "enabled": true, "path": "rules.json" }]
   },
   "web_accessible_resources": [
-    { "resources": ["injected.js"], "matches": ["<all_urls>"] }
+    { "resources": ["parser.js"], "matches": ["https://x.com/*", "https://twitter.com/*"] }
   ],
   "content_scripts": [
     {
       "matches": ["https://x.com/*", "https://twitter.com/*"],
       "js": ["content.js"],
-	  "css": ["styles.css"],
+      "css": ["styles.css"],
       "run_at": "document_start",
       "all_frames": true
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; img-src 'self' https://flagcdn.com data:"
+  }
 }
